[package]
name = "fast-blurhash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4.0"
ril = { version = "0.9", features = [ "webp" ] }

[[bench]]
name = "base83"
harness = false

[[bench]]
name = "dct"
harness = false
